--- a/styles/style.css
+++ b/styles/style.css
@@ -368,3 +368,11 @@
       display: none;
     }
   }
+  @media (max-width: 768px) { 
+    .tech-container {
+      display: none;
+    }
+    .skills-description{
+      width: 100%;
+    }
+  }
