--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   text-decoration: none;
   scroll-behavior: smooth;
-  font-family: "sans-serif";
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .bebas-neue-regular {
@@ -51,21 +51,6 @@ body {
   text-align: center;
 }
 
-.icon-hover {
-  transition: color 0.3s ease;
-}
-
-.logo {
-  font-size: 3rem;
-  color: #976eb8;
-  font-weight: 800;
-  cursor: pointer;
-  transition: 0.3s ease-in-out
-}
-
-.logo:hover {
-  transform: scale(1.1);
-}
 
 span {
   background: linear-gradient(270deg,
@@ -79,7 +64,7 @@ span {
   font-family: "Bebas Neue";
   letter-spacing: 0.1rem;
   font-size: 2.4rem;
-  color: #976eb8;
+  color: var(--main-color);
   margin-left: 4rem;
   font-weight: 500;
   transition: 0.3s ease-in-out;
@@ -128,7 +113,7 @@ section {
   font-size: 2rem;
   font-weight: 500;
   line-height: 1.8;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .home-img img {
@@ -202,6 +187,8 @@ h3 {
   flex-direction: row;
   align-items: center;
   font-size: 2rem;
+  position: relative;
+  padding: 2rem;
 
 }
 
@@ -212,10 +199,9 @@ h3 {
 
 }
 
-
-
 .tech-item i {
   font-size: 100px;
+
 }
 
 .tech-item img:hover,
@@ -224,8 +210,22 @@ h3 {
   transition: transform 0.3s ease;/
 }
 
-.tech-item:hover p {
-  font-size: 1.6rem;
+.tech-item .logo-name {
+  position: absolute;
+  bottom: -2rem;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: black;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+.tech-item:hover .logo-name {
+  opacity: 1;
+  color: black;
 }
 
 .skills {
@@ -270,7 +270,7 @@ h3 {
   padding-bottom: 2rem;
 }
 
-.gallery h2 {
+.galleryTitle {
   color: var(--main-color);
   font-size: 4rem;
   padding-bottom: 2rem;
@@ -313,12 +313,11 @@ h3 {
   background-color: #ffffff;
   width: 100%;
   width: 100%;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .projectimg {
   width: 32vw;
-  /* tarkista vielä pitäskö muuttaa! */
   height: auto;
   transition: transform 0.3s ease;
   border-radius: 10px;
@@ -328,10 +327,10 @@ h3 {
 }
 
 .projectimg:hover {
-  transform: scale(1.2);
-  z-index: 2;
+  cursor: pointer;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  opacity: 0.9;
 }
-
 
 #modal-video {
   top: 0;
@@ -356,6 +355,7 @@ button[data-close-modal] {
   border: none;
   border-radius: 50%;
   color: white;
+  line-height: 3rem;
 }
 
 
@@ -372,7 +372,7 @@ button[data-close-modal] {
   }
 
   .navbar a {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
   }
 
   .tech-container {
@@ -398,14 +398,13 @@ button[data-close-modal] {
   .projectimg {
     width: 100%;
     max-width: 90%;
-    pointer-events: none;
-    
+    cursor: pointer;
   }
 
   .projectimg:hover {
-    transform: scale(1.2);
-    z-index: 2;
-    
+    cursor: pointer;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    opacity: 0.9;
   }
 
 
@@ -440,7 +439,6 @@ button[data-close-modal] {
 
 
   @media (max-width: 480px) {
-
     .home-content h1 {
       font-size: 4.5rem;
     }
@@ -452,9 +450,15 @@ button[data-close-modal] {
     .home-img {
       display: none;
     }
+
+    .projectimg:hover {
+      cursor: pointer;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+      opacity: 0.9;
+
+    }
+   
   }
-
-
 
 
 }
