--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,118 @@
   --main-color: #976eb8;
 }
 
+
+/* Dark mode & toggle button */
+.dark-mode {
+  background-color: black;
+  color: white; 
+}
+
+
+.dark-mode header {
+  background-color: black; 
+  color: white; 
+  
+}
+.dark-mode .skills{
+  background-color: black;
+}
+.dark-mode .projects{
+  background-color: black;
+}
+
+.dark-mode .projectsTitle{
+  background-color: black;
+}
+
+.dark-mode .projectdiv{
+  background-color: black;
+}
+
+.dark-mode .projectInfo {
+  color: white;
+}
+
+
+.dark-mode .projectimg{
+  background-color: black;
+  border-radius: 1rem;
+}
+
+.dark-mode .projectdiv button[data-open-modal] {
+  background-color: black !important; 
+  
+}
+
+.dark-mode .skills-description {
+  background-color: black;
+}
+
+.dark-mode .tech-item{
+  background-color: white;
+  border-radius: 2rem; 
+}
+
+.dark-mode .tech-item .logo-name{
+  margin-bottom: 1.5rem;
+  font-size: 1.4rem;
+}
+.dark-mode .gallery {
+  background-color: black;
+}
+.dark-mode .gallery p {
+  color: white;
+}
+
+.dark-mode .home-img img {
+  width: 32vw;
+  border-radius: 50%;
+  transition: 0.4s ease-in-out;
+  filter: brightness(0.9) contrast(1.2);
+}
+
+.dark-mode .home-img img:hover {
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.8),  
+              0 0 50px var(--main-color),  
+              0 0 100px var(--main-color); 
+}
+
+.dark-mode .projectdiv p {
+  color: white;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 6rem;
+  height: 3rem;
+  background-color: var(--bg-color);
+  border-radius: 1.5rem;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 2.5rem;
+  width: 2.5rem;
+  left: 0.3rem;
+  bottom: 0.3rem;
+  background-color: var(--main-color);
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+
 html {
   font-size: 60%;
   overflow-x: hidden;
@@ -264,7 +376,7 @@ h3 {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: black;
   text-align: left;
-  max-width: 75%;
+  max-width: 95%;
   margin: 0 auto;
   display: block;
   padding-bottom: 2rem;
@@ -304,26 +416,41 @@ h3 {
   background-color: #ffffff;
   font-size: 4rem;
 }
-
+.projectInfo{
+  color: black;
+  align-items: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: normal;
+  font-size: 2rem;
+}
 .projectdiv {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   gap: 2rem;
   background-color: #ffffff;
   width: 100%;
-  width: 100%;
-  flex-wrap: nowrap;
+  text-align: center;
+  flex-wrap: wrap; 
+  flex-direction: column;
 }
 
 .projectimg {
-  width: 32vw;
+  width: 60vw;
   height: auto;
   transition: transform 0.3s ease;
   border-radius: 10px;
   position: relative;
   z-index: 1;
-  flex-wrap: wrap;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.projectdiv p {
+  color: black;
+  width: 60vw;
+  font-size: 2rem;
+  margin-bottom: 2rem; 
+  text-align: left;
 }
 
 .projectimg:hover {
@@ -340,6 +467,7 @@ h3 {
   object-fit: cover;
   margin: 0;
   padding: 0;
+ 
 }
 
 button[data-close-modal] {
@@ -394,6 +522,10 @@ button[data-close-modal] {
     align-items: center;
     gap: 2rem;
   }
+  .projectdiv p{
+    width: 100%;
+    text-align: left;
+  }
 
   .projectimg {
     width: 100%;
@@ -401,6 +533,11 @@ button[data-close-modal] {
     cursor: pointer;
   }
 
+  .gallery p {
+    width: 100%;
+    text-align: left;
+   
+  }
   .projectimg:hover {
     cursor: pointer;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
