--- a/styles/style.css
+++ b/styles/style.css
@@ -605,13 +605,15 @@ button[data-close-modal] {
     .slider:before {
       height: 1.5rem;
       width: 1.5rem;
-      left: -0.1rem;
+      left: 0.3rem;
       bottom: 0.3rem;
       background-color: var(--main-color);
       transition: 0.4s;
       border-radius: 50%;
     }
-   
+    .navbar a {
+      font-size: 1.2rem;
+    }
   }
 
 
