--- a/styles/style.css
+++ b/styles/style.css
@@ -624,7 +624,7 @@ button[data-close-modal] {
     .slider:before {
       height: 1.5rem;
       width: 1.5rem;
-      left: 0.3rem;
+      left: 0.2rem;
       bottom: 0.3rem;
       background-color: var(--main-color);
       transition: 0.4s;
@@ -632,7 +632,8 @@ button[data-close-modal] {
       position: absolute; 
     }
     .switch.checked .slider:before {
-      transform: translateX(1rem);
+      right: 0.2rem;
+      transform: none;
     }
     .navbar a {
       font-size: 1rem;
