--- a/styles/style.css
+++ b/styles/style.css
@@ -420,8 +420,8 @@ h3 {
   color: black;
   align-items: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: normal;
-  font-size: 2rem;
+  font-weight: bold;
+  font-size: 2.3rem;
 }
 .projectdiv {
   display: flex;
@@ -515,6 +515,7 @@ button[data-close-modal] {
     width: 70vw;
     height: 70vw;
     pointer-events: none;
+    
   }
 
   .projectdiv {
@@ -523,7 +524,7 @@ button[data-close-modal] {
     gap: 2rem;
   }
   .projectdiv p{
-    width: 100%;
+    width: 90%;
     text-align: left;
   }
 
@@ -532,6 +533,7 @@ button[data-close-modal] {
     width: 100%;
     max-width: 90%;
     cursor: pointer;
+    
   }
 
   .gallery p {
